[DVC and scripts] fixing things back to normal again, will try rerunning the whole during the weekend but done for now

--- a/src/4_visualizing/figuresDrawer.Rmd
+++ b/src/4_visualizing/figuresDrawer.Rmd
@@ -114,13 +114,13 @@ structureMetadata_2 <- read_delim(
 
 ### reference
 ```{r}
-referenceMetadata <- read_delim(
-  file = gzfile("../../data/interim/dictionaries/reference/metadata.tsv.gz"),
-  delim = "\t",
-  escape_double = FALSE,
-  trim_ws = TRUE
-  ) %>% 
-  data.frame()
+# referenceMetadata <- read_delim(
+#   file = gzfile("../../data/interim/dictionaries/reference/dictionaryOrganism.tsv.gz"),
+#   delim = "\t",
+#   escape_double = FALSE,
+#   trim_ws = TRUE
+#   ) %>% 
+#   data.frame()
 ```
 
 # binding dnp and open Db
